  29. CoffeeMud will now convert MSP tags to MXP SOUND tags if the session supports both, allowing us to hear sounds in CMUD/ZMUD once again.
  30. New commands for moving in space ships: foreward, portside, aft, above, below, and starboard. Compass versions included of course.
# Build 5.7.10 Release 2/17/2013 (* DB CHANGE!) (** Thanks to TGMUD for publishing their changelogs!!!)
   0. Database Schema Updated! Run DBUpgrade, OR create table CMCHCL (see appropriate schema file), then:
   INSERT INTO CMCHCL VALUES (SELECT USERID, CMCLAN, CMCLRO from CMCHAR where CMCLAN != ''); // lastly:
   ALTER TABLE CMCHAR DROP COLUMN CMCLAN; ALTER TABLE CMCHAR DROP COLUMN CMCLRO;   
   1. (Minor) ResourceOverride is now an ActiveTicker for better control over its behavior.  Also, room types bug fixed.
   2. New INI entries for whitelisting over ip/login/newplayer blocks: WHITELISTIPSCONN, WHITELISTLOGINS, WHITELISTIPSNEWPLAYERS
   3. Special GET case: Can now get parts of a bundle from a container -- get 2 oak from wagon will break a 2# bundle from inside in a wagon.
   4. Carpentry skills list underwent a little makeover.
   5. I3 LISTEN/SILENCE can be used by i3 admins to test out other channels... if you turn one on, be sure to turn it off before you leave!
   6. (internal) XMLManager optomized for More Speed!
   7. Missing INI entry (WRNMSGS) now added and documented.
   8. New Property (Prop_RoomList) -- more lightweight way to keep rooms from going dark at night (pun intended).
   9. New Skills: Urban Tactics, Pressure Points, Hideout
  10. New Clan Trophies: Most Members, and Highest Median Member Level
  11. Pregnancy will fail if either participant is exhausted or below 1/2 movement.  A message was added so the players know.
  12. Arcanists can LOOK at wand charges at level 30.
  13. Common Skills now support "STOP" to cancel.
  14. Troll regeneration moved from the MOB to the Race