@@ -525,6 +525,21 @@ Description: \n\r\
 Any items places in the room or container with this property will not spoil.  When removed, however,\
 spoilage will resume.
 
+PROP_IMPROVEGATHER=\
+Property   : Prop_ImproveGather\n\r\
+Targets    : Items,Rooms,Mobs,Areas\n\r\
+Parameters : AMT=[MULTIPLIER] MASK=[ZAPPERMASK] SKILLS=ALL/[SKILLID LIST]\n\r\
+Example    : amt=3 mask="-SEASON +SPRING" skills=Farming,Foraging\n\r\
+Description: \n\r\
+Alls the mob, item, or location to bestow the ability to multiply the yield \
+from certain gathering skills.  SKILLS can be either a list of Ability IDs, \
+or the word "ALL" to apply to all gathering skills.  A MASK would always apply \
+to the person doing the skill, and the AMT is the integer number to multiply \
+the yield by (or 0 to make it go away altogether!).\n\r\
+\n\r\
+<ZAP=improve>
+
+
 PROP_INVISIBILITY=\
 Property   : Prop_Invisibility\n\r\
 Targets    : MOB\n\r\
