@@ -30,6 +30,8 @@
   28. New INI entry 'DEFAULTPARENTAREA' for automatically setting new areas (or existing ones) that use the global clock to share a parent area.
   29. CoffeeMud will now convert MSP tags to MXP SOUND tags if the session supports both, allowing us to hear sounds in CMUD/ZMUD once again.
   30. New commands for moving in space ships: foreward, portside, aft, above, below, and starboard. Compass versions included of course.
+  31. When entering "?" in the Affects/Behaviors command line modifier, it will now highlight the appropriate abilities/behaviors. It's awesome!
+  32. New Property: Prop_ImproveGather, for modifying the yield of gathering skills based on masks
 # Build 5.7.10 Release 2/17/2013 (* DB CHANGE!) (** Thanks to TGMUD for publishing their changelogs!!!)
    0. Database Schema Updated! Run DBUpgrade, OR create table CMCHCL (see appropriate schema file), then:
    INSERT INTO CMCHCL VALUES (SELECT USERID, CMCLAN, CMCLRO from CMCHAR where CMCLAN != ''); // lastly:
